force-app/main/default/objects/FTMSSOTrxPlan__c/FTMSSOTrxPlan__c.object-meta.xml
<CustomObject>
    <label>F/TMS S/O+Trx Plan</label>
    <nameField>
        <displayFormat>SOTP-{000000}</displayFormat>
        <label>F/TMS S/O+Trx Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F/TMS S/O+Trx Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>