force-app/main/default/objects/FTMSSOTrxPlan__c/fields/FTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>FTMSSOID__c</fullName>
    <label>F/TMS S/O ID</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>F/TMS S/O+TRX PLAN</relationshipLabel>
    <relationshipName>FTMSSOTrxPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>