force-app/main/default/objects/FTMSSOTrxPlan__c/fields/SOJobRequestID__c.field-meta.xml
<CustomField>
    <fullName>SOJobRequestID__c</fullName>
    <formula>FTMSSOID__r.JobRequestID__c</formula>
    <label>S/O Job Request ID</label>
    <type>Text</type>
</CustomField>