force-app/main/default/objects/FTMSSOTrxPlan__c/fields/SOReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SOReferenceNumber__c</fullName>
    <formula>FTMSSOID__r.REFNO__c</formula>
    <label>S/O Reference Number</label>
    <type>Text</type>
</CustomField>